--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "node-sass": "^5.0.0"
+    "node-sass": "^4.14.1"
+  },
+  "devDependencies": {
+    "sass": "^1.29.0"
   }
 }
